--- a/index.html
+++ b/index.html
@@ -120,19 +120,19 @@ li a:hover:not(.active) {
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Artificail Intelligence Intern</b></h5>
+          <h5 class="w3-opacity"><b>Artificail Intelligence Intern | Home Drone</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2018 - Jan 2019</h6>
           <p>Programmed and designed drones to develop a marketable product for specific applications.  Worked on making dronessmarter and fully automated by adding object detection and path detection techniques.</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Machine Learning Intern</b></h5>
+          <h5 class="w3-opacity"><b>Machine Learning Intern | KJSCE</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2017 - Jan 2018</h6>
           <p>Worked on Human emotion detection and classification into the seven basic emotions. Used Haar cascades and Deep NeuralNetwork for facial expressions and recurrent neural network for speech.</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Web Development Intern</b></h5>
+          <h5 class="w3-opacity"><b>Web Development Intern | kWatt Solutions, IIT Bombay.</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2017 - Jan 2018</h6>
           <p>Maintained and managed official websites of the organization. Added new webpages and additional features like webinarsand live chat. Made the website secure and also easy to use and handle for visitors as well as company employees. </p><br>
         </div>
